--- a/src/lk/ijse/gdse66/hostel/view/login_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/login_form.fxml
@@ -6,11 +6,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.LoginFormController">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.LoginFormController">
     <children>
-        <JFXTextField fx:id="txtUserName" layoutX="217.0" layoutY="146.0" promptText="User Name" />
-        <JFXPasswordField fx:id="txtPassword" layoutX="217.0" layoutY="234.0" promptText="Password" />
-        <Label layoutX="208.0" layoutY="55.0" text="Hostel management System" />
-        <JFXButton layoutX="272.0" layoutY="315.0" onAction="#loginOnAction" text="Login" />
+        <JFXTextField fx:id="txtUserName" focusTraversable="false" layoutX="217.0" layoutY="146.0"
+                      promptText="User Name"/>
+        <JFXPasswordField fx:id="txtPassword" focusTraversable="false" layoutX="217.0" layoutY="234.0"
+                          promptText="Password"/>
+        <Label focusTraversable="false" layoutX="208.0" layoutY="55.0" text="Hostel management System"/>
+        <JFXButton focusTraversable="false" layoutX="272.0" layoutY="315.0" onAction="#loginOnAction" text="Login"/>
     </children>
 </AnchorPane>
