--- a/src/lk/ijse/gdse66/hostel/view/login_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/login_form.fxml
@@ -5,15 +5,16 @@
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.LoginFormController">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.LoginFormController">
     <children>
-        <JFXTextField fx:id="txtUserName" focusTraversable="false" layoutX="217.0" layoutY="146.0"
-                      promptText="User Name"/>
-        <JFXPasswordField fx:id="txtPassword" focusTraversable="false" layoutX="217.0" layoutY="234.0"
-                          promptText="Password"/>
-        <Label focusTraversable="false" layoutX="208.0" layoutY="55.0" text="Hostel management System"/>
-        <JFXButton focusTraversable="false" layoutX="272.0" layoutY="315.0" onAction="#loginOnAction" text="Login"/>
+        <JFXTextField fx:id="txtUserName" focusTraversable="false" layoutX="216.0" layoutY="136.0" promptText="User Name" />
+        <JFXPasswordField fx:id="txtPassword" focusTraversable="false" layoutX="217.0" layoutY="222.0" promptText="Password" />
+        <Label focusTraversable="false" layoutX="190.0" layoutY="54.0" text="Hostel management System">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+        <JFXButton focusTraversable="false" layoutX="269.0" layoutY="312.0" onAction="#loginOnAction" text="Log In" />
     </children>
 </AnchorPane>
