--- a/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.DashboardFormController">
     <children>
-        <Label focusTraversable="false" layoutX="236.0" layoutY="56.0" text="User Dashboard">
+        <Label focusTraversable="false" layoutX="257.0" layoutY="61.0" text="Dashboard">
          <font>
             <Font size="18.0" />
          </font></Label>
