Manage Students UI Implementing

--- a/src/lk/ijse/gdse66/hostel/view/login_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/login_form.fxml
@@ -7,14 +7,18 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.LoginFormController">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.LoginFormController">
     <children>
-        <JFXTextField fx:id="txtUserName" focusTraversable="false" layoutX="216.0" layoutY="136.0" promptText="User Name" />
-        <JFXPasswordField fx:id="txtPassword" focusTraversable="false" layoutX="217.0" layoutY="222.0" promptText="Password" />
+        <JFXTextField fx:id="txtUserName" focusTraversable="false" layoutX="216.0" layoutY="136.0"
+                      promptText="User Name"/>
+        <JFXPasswordField fx:id="txtPassword" focusTraversable="false" layoutX="217.0" layoutY="222.0"
+                          promptText="Password"/>
         <Label focusTraversable="false" layoutX="190.0" layoutY="54.0" text="Hostel Management System">
-         <font>
-            <Font size="18.0" />
-         </font></Label>
-        <JFXButton focusTraversable="false" layoutX="269.0" layoutY="312.0" onAction="#loginOnAction" text="Log In" />
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </Label>
+        <JFXButton focusTraversable="false" layoutX="269.0" layoutY="312.0" onAction="#loginOnAction" text="Log In"/>
     </children>
 </AnchorPane>
