--- a/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
@@ -5,15 +5,22 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.DashboardFormController">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="lk.ijse.gdse66.hostel.controller.DashboardFormController">
     <children>
         <Label focusTraversable="false" layoutX="257.0" layoutY="61.0" text="Dashboard">
-         <font>
-            <Font size="18.0" />
-         </font></Label>
-        <JFXButton focusTraversable="false" layoutX="67.0" layoutY="183.0" onAction="#registrationOnAction" text="Manage&#10;Registration" textAlignment="CENTER" />
-        <JFXButton focusTraversable="false" layoutX="263.0" layoutY="183.0" onAction="#roomsOnAction" text="Manage&#10;Rooms" textAlignment="CENTER" />
-        <JFXButton focusTraversable="false" layoutX="423.0" layoutY="183.0" onAction="#keyMoneyOnAction" text="Find&#10;Key-Money" textAlignment="CENTER" />
-        <JFXButton focusTraversable="false" layoutX="246.0" layoutY="312.0" onAction="#userOnAction" text="Manage User" textAlignment="CENTER" />
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </Label>
+        <JFXButton focusTraversable="false" layoutX="67.0" layoutY="183.0" onAction="#registrationOnAction"
+                   text="Manage&#10;Registration" textAlignment="CENTER"/>
+        <JFXButton focusTraversable="false" layoutX="263.0" layoutY="183.0" onAction="#roomsOnAction"
+                   text="Manage&#10;Rooms" textAlignment="CENTER"/>
+        <JFXButton focusTraversable="false" layoutX="423.0" layoutY="183.0" onAction="#keyMoneyOnAction"
+                   text="Find&#10;Key-Money" textAlignment="CENTER"/>
+        <JFXButton focusTraversable="false" layoutX="246.0" layoutY="312.0" onAction="#userOnAction" text="Manage User"
+                   textAlignment="CENTER"/>
     </children>
 </AnchorPane>
