--- a/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
@@ -5,22 +5,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="lk.ijse.gdse66.hostel.controller.DashboardFormController">
+<AnchorPane fx:id="root" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.DashboardFormController">
     <children>
-        <Label focusTraversable="false" layoutX="257.0" layoutY="61.0" text="Dashboard">
+        <Label focusTraversable="false" layoutX="108.0" layoutY="68.0" text="Dashboard">
             <font>
-                <Font size="18.0"/>
+                <Font size="25.0" />
             </font>
         </Label>
-        <JFXButton focusTraversable="false" layoutX="67.0" layoutY="183.0" onAction="#registrationOnAction"
-                   text="Manage&#10;Registration" textAlignment="CENTER"/>
-        <JFXButton focusTraversable="false" layoutX="263.0" layoutY="183.0" onAction="#roomsOnAction"
-                   text="Manage&#10;Rooms" textAlignment="CENTER"/>
-        <JFXButton focusTraversable="false" layoutX="423.0" layoutY="183.0" onAction="#keyMoneyOnAction"
-                   text="Find&#10;Key-Money" textAlignment="CENTER"/>
-        <JFXButton focusTraversable="false" layoutX="246.0" layoutY="312.0" onAction="#userOnAction" text="Manage User"
-                   textAlignment="CENTER"/>
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="88.0" layoutY="199.0" onAction="#registrationOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage Registration" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="88.0" layoutY="300.0" onAction="#roomsOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage Rooms" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="88.0" layoutY="404.0" onAction="#keyMoneyOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Find Key-Money" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="88.0" layoutY="502.0" onAction="#userOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage User" textAlignment="CENTER" />
     </children>
 </AnchorPane>
