--- a/src/lk/ijse/gdse66/hostel/view/manage_rooms_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/manage_rooms_form.fxml
@@ -8,36 +8,28 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="lk.ijse.gdse66.hostel.controller.ManageRoomsFormController">
+<AnchorPane fx:id="root" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.ManageRoomsFormController">
     <children>
-        <Label focusTraversable="false" layoutX="79.0" layoutY="57.0" text="Manage Rooms">
+        <Label focusTraversable="false" layoutX="413.0" layoutY="40.0" text="Manage Rooms">
             <font>
-                <Font size="18.0"/>
+                <Font size="25.0" />
             </font>
         </Label>
-        <JFXTextField fx:id="txtRoomId" focusTraversable="false" layoutX="79.0" layoutY="120.0" promptText="Room ID"/>
-        <JFXTextField fx:id="txtRoomType" focusTraversable="false" layoutX="352.0" layoutY="120.0"
-                      promptText="Room Type"/>
-        <JFXTextField fx:id="txtKeyMoney" focusTraversable="false" layoutX="79.0" layoutY="206.0"
-                      promptText="Key Money"/>
-        <JFXTextField fx:id="txtQty" focusTraversable="false" layoutX="352.0" layoutY="206.0" promptText="Quantity"/>
-        <JFXButton fx:id="btnAddNew" focusTraversable="false" layoutX="79.0" layoutY="289.0" onAction="#addNewOnAction"
-                   text="+ Add New"/>
-        <JFXButton fx:id="btnSave" focusTraversable="false" layoutX="275.0" layoutY="289.0" onAction="#saveOnAction"
-                   text="Save"/>
-        <JFXButton fx:id="btnDelete" focusTraversable="false" layoutX="458.0" layoutY="289.0" onAction="#deleteOnAction"
-                   text="Delete"/>
-        <JFXButton focusTraversable="false" layoutX="18.0" layoutY="15.0" onAction="#backOnAction" text="Back"/>
-        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="352.0" layoutY="39.0"
-                      onAction="#searchOnAction" promptText="RM-001"/>
-        <TableView focusTraversable="false" layoutX="12.0" layoutY="339.0" prefHeight="247.0" prefWidth="576.0">
+        <JFXTextField fx:id="txtRoomId" focusTraversable="false" layoutX="109.0" layoutY="131.0" promptText="Room ID" />
+        <JFXTextField fx:id="txtRoomType" focusTraversable="false" layoutX="503.0" layoutY="131.0" promptText="Room Type" />
+        <JFXTextField fx:id="txtKeyMoney" focusTraversable="false" layoutX="109.0" layoutY="239.0" promptText="Key Money" />
+        <JFXTextField fx:id="txtQty" focusTraversable="false" layoutX="503.0" layoutY="239.0" promptText="Quantity" />
+        <JFXButton fx:id="btnAddNew" buttonType="RAISED" focusTraversable="false" layoutX="823.0" layoutY="121.0" onAction="#addNewOnAction" prefHeight="31.0" prefWidth="100.0" style="-fx-background-color: lightblue;" text="+ Add New" />
+        <JFXButton fx:id="btnSave" buttonType="RAISED" focusTraversable="false" layoutX="823.0" layoutY="185.0" onAction="#saveOnAction" prefHeight="31.0" prefWidth="100.0" style="-fx-background-color: lightblue;" text="Save" />
+        <JFXButton fx:id="btnDelete" buttonType="RAISED" focusTraversable="false" layoutX="823.0" layoutY="254.0" onAction="#deleteOnAction" prefHeight="31.0" prefWidth="100.0" style="-fx-background-color: lightblue;" text="Delete" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="18.0" layoutY="15.0" onAction="#backOnAction" prefWidth="80.0" style="-fx-background-color: lightblue;" text="Back" />
+        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="788.0" layoutY="42.0" onAction="#searchOnAction" promptText="RM-001" />
+        <TableView focusTraversable="false" layoutX="12.0" layoutY="329.0" prefHeight="257.0" prefWidth="976.0">
             <columns>
-                <TableColumn editable="false" minWidth="144.0" prefWidth="75.0" resizable="false" text="Room ID"/>
-                <TableColumn editable="false" minWidth="144.0" prefWidth="75.0" resizable="false" text="Room Type"/>
-                <TableColumn editable="false" minWidth="144.0" prefWidth="75.0" resizable="false" text="Key Money"/>
-                <TableColumn editable="false" minWidth="140.0" prefWidth="143.0" resizable="false" text="Quantity"/>
+                <TableColumn editable="false" minWidth="244.0" prefWidth="75.0" resizable="false" text="Room ID" />
+                <TableColumn editable="false" minWidth="244.0" prefWidth="75.0" resizable="false" text="Room Type" />
+                <TableColumn editable="false" minWidth="244.0" prefWidth="75.0" resizable="false" text="Key Money" />
+                <TableColumn editable="false" minWidth="140.0" prefWidth="243.0" resizable="false" text="Quantity" />
             </columns>
         </TableView>
     </children>
